--- a/MusicTimer/MusicTimer.entitlements
+++ b/MusicTimer/MusicTimer.entitlements
@@ -3,8 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.huntergilliam.musictimer.contents</string>
-	</array>
+	<array/>
 </dict>
 </plist>
